# rust-rest-api

./: Cargo.toml  README.md  help.txt
src/: app.rs  main.rs
src/config/: mod.rs
src/dao/: auth_dao_service.rs  mod.rs
src/database/: mod.rs
src/handlers/: auth.rs  auth_handler.rs  user.rs
src/utils/: mod.rs
