# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[alias]
dev = "cargo watch -c -w src/ -w Cargo.toml -x check -x run"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
mongodb = "3.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
swagger-ui-dist = "5.29.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
