# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[alias]
dev = "cargo watch -c -w src/ -w Cargo.toml -x check -x run"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = "0.4.41"
dotenv = { version = "0.15", optional = true }
mongodb = "3.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
default = ["dotenv"]   # used in local dev
production = []        # no dotenv in production
